# jumperless_streamchat_control

./: .gitignore  LICENSE  README.md  acl.py  breadboardchat.py  func_list.txt  pyproject.toml  requirements.txt
src/JumperlessChat/: acl.py  chat.py  cmdparser.py  handlers.py
