[project]
name = "JumperlessChat"
version = "0.0.1"
authors = [
  { name="ReversingForFun", email="IDoComputersYT@gmail.com" },
]
description = "Control a JumperlessV5 with Youtube live chat"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
jumperlesschat = "JumperlessChat.chat:main"

[build-system]
requires = ["setuptools >= 77.0.3",
            "pytchat >= 0.5.5",
            "pyserial >= 3.5",
            ]
build-backend = "setuptools.build_meta"